test/Fail/TypeBasedTermination/RecursionInPiType.err
TypeBasedTermination/RecursionInPiType.agda:12.1-13.26: error: [TerminationIssue]
Termination checking failed for the following functions:
  T
Problematic calls:
  T j
    (at TypeBasedTermination/RecursionInPiType.agda:13.23-24)

TypeBasedTermination/RecursionInPiType.agda:17.15-19: error: [UnequalTerms]
x != y of type T i
when checking that the expression refl has type x ≡ y
